[package]
name = "isle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
image = "0.24"
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
vulkano-win = "0.31.0"
winit = "0.27.3"
rand = "0.8.5"