[package]
name = "isle"
version = "0.1.0"
edition = "2021"

[dependencies]
isle_traits = { path = "./traits" }
isle_macros = { path = "./macros" }
bytemuck = "1.13.0"
image = "0.24"
lazy_static = "1.4.0"
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
vulkano-win = "0.31.0"
winit = "0.27.3"
rand = "0.8.5"